--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -427,7 +427,7 @@ footer.site-footer {
   #bio {
     p {
       line-height: 1.6em;
-      margin: 0;
+      margin: 0.3em 0;
 
       a {
         background-color: $color-green;
